<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MainFragment">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_deposit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deposit" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_transfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/transfer"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_withdraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/withdraw"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_checkBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/balance"

            />

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>